--- a/styles/style.css
+++ b/styles/style.css
@@ -42,3 +42,25 @@ iframe#tela {
     width: 267px;
     height: 470px;
 }
+
+section#redes {
+    display: flex;
+    align-items: end;
+    flex-direction: column;
+}
+
+section#redes img{
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+
+section#redes img:hover{
+    border: 3px solid white;
+    transform: translate(-3px,-3px);
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.400);
+    transition: .5s;
+}
